--- a/src/platforms/android/libraryproject/firebase/build.gradle
+++ b/src/platforms/android/libraryproject/firebase/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 32
+    buildToolsVersion "32.0.0"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.firebase:firebase-messaging:9.0.2'
+    implementation 'com.google.firebase:firebase-messaging:10.2.1'
 //    compile 'com.android.support:appcompat-v7:23.+'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    testCompile 'junit:junit:4.12'
 }
